--- a/TravelPlanner/res/layout/activity_login.xml
+++ b/TravelPlanner/res/layout/activity_login.xml
@@ -6,11 +6,44 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ca.ualberta.cmput301w15t13.Activities.LoginActivity" >
+    android:background="@color/background"
+    tools:context="ca.ualberta.cmput301w15t13.Activities.LoginActivity" 
+    >
 
-    <TextView
+    <EditText
+        android:id="@+id/editTextPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:ems="10"
+        android:hint="@string/password"
+        android:textColor="@color/text"
+        android:inputType="textPassword" >
+    </EditText>
+
+    <EditText
+        android:id="@+id/editTextUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editTextPassword"
+        android:layout_centerHorizontal="true"
+        android:singleLine="true"
+        android:hint="@string/username"
+        android:textColor="@color/text"
+        android:maxLength="255"
+        android:ems="10">
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/buttonLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editTextPassword"
+        android:layout_alignRight="@+id/editTextUsername"
+        android:layout_below="@+id/editTextPassword"
+        android:textColor="@color/text"
+        android:text="@string/login" />
 
 </RelativeLayout>
