Added the claim activity and some temprary layouts

--- a/TravelPlanner/res/layout/activity_login.xml
+++ b/TravelPlanner/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
         android:layout_alignRight="@+id/editTextUsername"
         android:layout_below="@+id/editTextPassword"
         android:textColor="@color/text"
-        android:text="@string/login" />
+        android:text="@string/login" 
+        android:onClick="login"/>
 
 </RelativeLayout>
