--- a/TravelPlanner/res/values/color.xml
+++ b/TravelPlanner/res/values/color.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<color name="background">#333333</color>
+	<color name="background_dark">#222222</color>
 	<color name="text">#eeeeee</color>    
 </resources>
