--- a/TravelPlanner/res/layout/claim_actionbar_layout.xml
+++ b/TravelPlanner/res/layout/claim_actionbar_layout.xml
@@ -37,7 +37,7 @@
 		    </EditText>
 
 		    <ImageButton
-		        android:id="@+id/ibuttonSearchClaim"
+		        android:id="@+id/buttonSearchClaim"
 		        android:layout_width="wrap_content"
 		        android:layout_height="match_parent"
 		        android:src="@android:drawable/ic_menu_search" />
