--- a/TravelPlanner/res/layout/claim_viewer_layout.xml
+++ b/TravelPlanner/res/layout/claim_viewer_layout.xml
@@ -13,6 +13,7 @@
         android:id="@+id/listViewClaim"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_above="@+id/buttonNewClaim" >
         
     </ListView>
