They say you shouldn't commit late at night. They were wrong. Can now navigate between fragments. TDD and stuff.

--- a/TravelPlanner/res/layout/claim_manager_layout.xml
+++ b/TravelPlanner/res/layout/claim_manager_layout.xml
@@ -147,7 +147,7 @@
 	    android:layout_alignParentBottom="true"
 	    android:text="@string/create_claim"
 	    android:textColor="@color/text"
-	    android:onClick="setFragmentToClaimViewer"
+	    android:onClick="finishClaim"
 	    />
 	
 </RelativeLayout>
