--- a/TravelPlanner/res/values/color.xml
+++ b/TravelPlanner/res/values/color.xml
@@ -2,5 +2,6 @@
 <resources>
 	<color name="background">#333333</color>
 	<color name="background_dark">#222222</color>
-	<color name="text">#eeeeee</color>    
+	<color name="text">#eeeeee</color>
+	<color name="incomplete">#ff0000</color>    
 </resources>
