Solved the destination scope bug, and created a new one :)

--- a/TravelPlanner/res/layout/claim_manager_layout.xml
+++ b/TravelPlanner/res/layout/claim_manager_layout.xml
@@ -18,13 +18,14 @@
 	
 			<EditText
 			    android:id="@+id/editTextClaimName"
+			    android:singleLine="true"
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
 			    android:textColor="@color/text"
 			    android:hint="@string/claim_name"
 			    android:layout_marginBottom="6dp"
 			    android:ems="10" >
-	
+
 			    <requestFocus />
 			</EditText>
 			
