Added the dupe login as approver. Local boolean var now distinguishes between the two

--- a/TravelPlanner/res/layout/activity_login.xml
+++ b/TravelPlanner/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
         android:layout_alignRight="@+id/buttonLogin"
         android:layout_below="@+id/buttonLogin"
         android:text="@string/approverLogin"
+        android:onClick="loginAsApprover"
         android:textColor="@color/text" />
 
 </RelativeLayout>
