--- a/TravelPlanner/res/layout/claim_manager_layout.xml
+++ b/TravelPlanner/res/layout/claim_manager_layout.xml
@@ -168,6 +168,7 @@
 		    android:layout_weight="0.5"
 		    android:layout_height="wrap_content"
 		    android:text="@string/cancel"
+		    android:onClick="cancelClaim"
 		    android:textColor="@color/text" />
 	    		
 		<Button
