Looking for work to do. Did some layout XMLs
Late night, still needs some adaptors, views and activity code

--- a/TravelPlanner/res/values/currencyStrings.xml
+++ b/TravelPlanner/res/values/currencyStrings.xml
@@ -3,10 +3,11 @@
     <string-array name="currency_array">
         <item>CAD</item>
         <item>USD</item>
+        <item>GBP</item>
         <item>EUR</item>
-        <item>INR</item>
-        <item>AUS</item>
-        <item>ILS</item>
+        <item>CHF</item>
+        <item>JPY</item>
+        <item>CNY</item>
     </string-array>
 </resources>
 <!-- 
