--- a/TravelPlanner/res/layout/expense_item_manager.xml
+++ b/TravelPlanner/res/layout/expense_item_manager.xml
@@ -9,7 +9,7 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:layout_alignParentTop="true"
-	    android:layout_above="@+id/layoutButtons">
+	    android:layout_above="@+id/layoutButtonsExpense">
 	    
 		<LinearLayout 
 		    android:layout_width="match_parent"
