--- a/TravelPlanner/res/layout/claim_adapter_dialog.xml
+++ b/TravelPlanner/res/layout/claim_adapter_dialog.xml
@@ -1,54 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" 
-    android:background="@color/background_dark"
-    android:layout_margin="15dp"
-    android:padding="5dp"
-    >
 
-    <LinearLayout
-        android:id="@+id/topRow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+   <LinearLayout
+       xmlns:android="http://schemas.android.com/apk/res/android"
+       android:id="@+id/topRow"
+       android:layout_width="100dp"
+       android:layout_height="wrap_content"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentTop="true" 
+       android:orientation="vertical"
+       android:background="@color/background_dark"
+       android:padding="1dp"
+       >
 
-        <Button
-            android:id="@+id/buttonEditClaim"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text"
-            android:text="@string/edit" />
+       <Button
+           android:id="@+id/buttonEditClaim"
+           android:layout_width="match_parent"
+           android:layout_height="25dp"
+           android:textSize="12sp"
+           android:textColor="@color/text"
+           android:text="@string/edit" />
 
-        <Button
-            android:id="@+id/buttonSubmitClaim"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text"
-            android:text="@string/submit" />
-        
-    </LinearLayout>
+       <Button
+           android:id="@+id/buttonSubmitClaim"
+           android:layout_width="match_parent"
+           android:layout_height="25dp"
+           android:textSize="12sp"
+           android:text="@string/submit"
+           android:textColor="@color/text" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/topRow">
+       <Button
+           android:id="@+id/buttonDeleteClaim"
+           android:layout_width="match_parent"
+           android:layout_height="25dp"
+           android:textSize="12sp"
+           android:text="@string/delete"
+           android:textColor="@color/text" />
 
-        <Button
-            android:id="@+id/buttonDeleteClaim"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text"
-            android:text="@string/delete" />
+       <Button
+           android:id="@+id/button"
+           android:layout_width="match_parent"
+           android:layout_height="25dp"
+           android:textSize="12sp"
+           android:text="@string/holder"
+           android:textColor="@color/text" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text"
-            android:text="@string/holder" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+   </LinearLayout>
