--- a/TravelPlanner/res/layout/claim_adapter_dialog.xml
+++ b/TravelPlanner/res/layout/claim_adapter_dialog.xml
@@ -3,7 +3,7 @@
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topRow"
-       android:layout_width="100dp"
+       android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" 
@@ -15,7 +15,7 @@
        <Button
            android:id="@+id/buttonEditClaim"
            android:layout_width="match_parent"
-           android:layout_height="25dp"
+           android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/text"
            android:text="@string/edit" />
@@ -23,7 +23,7 @@
        <Button
            android:id="@+id/buttonSubmitClaim"
            android:layout_width="match_parent"
-           android:layout_height="25dp"
+           android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/submit"
            android:textColor="@color/text" />
@@ -31,17 +31,9 @@
        <Button
            android:id="@+id/buttonDeleteClaim"
            android:layout_width="match_parent"
-           android:layout_height="25dp"
+           android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/delete"
-           android:textColor="@color/text" />
-
-       <Button
-           android:id="@+id/button"
-           android:layout_width="match_parent"
-           android:layout_height="25dp"
-           android:textSize="12sp"
-           android:text="@string/holder"
            android:textColor="@color/text" />
 
    </LinearLayout>
