--- a/TravelPlanner/res/layout/approver_adapter_dialog.xml
+++ b/TravelPlanner/res/layout/approver_adapter_dialog.xml
@@ -13,7 +13,7 @@
        >
 
        <Button
-           android:id="@+id/buttonEditClaim"
+           android:id="@+id/buttonApproveClaim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
@@ -21,7 +21,7 @@
            android:text="@string/approve" />
        
        <Button
-           android:id="@+id/buttonViewClaim"
+           android:id="@+id/buttonReturnClaim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_claim"
