added few more required spinner items for the expense category

--- a/TravelPlanner/res/values/category_strings.xml
+++ b/TravelPlanner/res/values/category_strings.xml
@@ -4,10 +4,13 @@
         <item>Air Fare</item>
         <item>Ground Transport</item>
         <item>Vehicle Rental</item>
+        <item>Private Automobile</item>
         <item>Fuel</item>
         <item>Parking</item>
         <item>Registration</item>
         <item>Accommodation</item>
+        <item>Meal</item>
+        <item>Supplies</item>
     </string-array>
 </resources>
 
