--- a/TravelPlanner/res/layout/expense_adapter_layout.xml
+++ b/TravelPlanner/res/layout/expense_adapter_layout.xml
@@ -47,11 +47,32 @@
         android:textColor="@color/text" />
 
     <TextView
+        android:id="@+id/moneySignText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewAdapterExpenseDate"
+        android:layout_toRightOf="@+id/incompletenessIndicator"
+        android:text="@string/$"
+        android:textColor="@color/text"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
         android:id="@+id/textViewAdapterExpenseAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textViewAdapterExpenseDate"
         android:layout_below="@+id/textViewAdapterExpenseDate"
+        android:layout_toRightOf="@+id/moneySignText"
+        android:gravity="right"
+        android:text="@string/holder"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/text" />
+
+    <TextView
+        android:id="@+id/textViewAdapterCurrency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewAdapterExpenseDate"
+        android:layout_toRightOf="@+id/textViewAdapterExpenseAmount"
         android:gravity="right"
         android:text="@string/holder"
         android:textAppearance="?android:attr/textAppearanceSmall"
