Very primitive photo (no viewing)

--- a/TravelPlanner/res/layout/expense_item_manager.xml
+++ b/TravelPlanner/res/layout/expense_item_manager.xml
@@ -103,10 +103,11 @@
 				>
 
 				<ImageButton
-				    android:id="@+id/imageButton1"
+				    android:id="@+id/expenseManagerPictureButton"
 				    android:layout_width="0dp"
 				    android:layout_height="wrap_content"
 				    android:layout_weight="0.2"
+				    android:onClick="takePicture"
 				    android:src="@android:drawable/btn_star" />
 				
 			</LinearLayout>
