--- a/TravelPlanner/res/layout/take_a_photo.xml
+++ b/TravelPlanner/res/layout/take_a_photo.xml
@@ -15,7 +15,7 @@
         android:text="Take a Photo" />
 
     <ImageButton
-        android:id="@+id/imageButton1"
+        android:id="@+id/expenseManagerPictureButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -29,8 +29,8 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton1"
-        android:layout_below="@+id/imageButton1"
+        android:layout_alignLeft="@+id/expenseManagerPictureButton"
+        android:layout_below="@+id/expenseManagerPictureButton"
         android:layout_marginTop="22dp"
         android:text="Result:" />
 
