ayy lmao receipt holder

--- a/TravelPlanner/res/layout/expense_adapter_layout.xml
+++ b/TravelPlanner/res/layout/expense_adapter_layout.xml
@@ -78,4 +78,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/text" />
 
+    <ImageView
+        android:id="@+id/receiptViewatAdapter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/imageViewExpenseAdapterStatus"
+        android:src="@drawable/ic_ayy" />
+
 </RelativeLayout>
