--- a/TravelPlanner/res/layout/expense_item_manager.xml
+++ b/TravelPlanner/res/layout/expense_item_manager.xml
@@ -102,6 +102,13 @@
 		    	android:layout_marginLeft="3dp"
 				>
 
+				<ImageView
+				    android:id="@+id/receiptImageHolder"
+				    android:layout_width="0dp"
+				    android:layout_height="wrap_content"
+				    android:layout_weight="0.2"
+				    android:src="@drawable/ic_ayy" />
+
 				<ImageButton
 				    android:id="@+id/expenseManagerPictureButton"
 				    android:layout_width="0dp"
