--- a/TravelPlanner/res/layout/expense_view_layout.xml
+++ b/TravelPlanner/res/layout/expense_view_layout.xml
@@ -176,7 +176,7 @@
 			    	>
 
 		        <ImageView
-		            android:id="@+id/imageView1"
+		            android:id="@+id/receiptViewatAdapter"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_launcher" />
